/** Arynga CarSync(TM)
 * 2014 Copyrights by Arynga Inc. All rights reserved.
 * Unauthorized copying of this file, via any medium is strictly prohibited.
 * Proprietary and confidential.
 */

#ifndef PROTO_TEST_H
#define PROTO_TEST_H

#ifdef __cplusplus
extern "C" {
# endif

#include <CUnit/Basic.h>

CU_pSuite proto_tests_getSuite();

#ifdef __cplusplus
}
#endif

#endif // PROTO_TEST_H
